--- a/css/styles.css
+++ b/css/styles.css
@@ -380,10 +380,10 @@ body {
   }
   
   .social:hover {
-    background-color: #404bbf;
+    background-color: #31d0aa;
   }
   .social:focus {
-    background-color: #404bbf;
+    background-color: #31d0aa;
   }
   .icon {
     /* fill: #f4f4fd; */
@@ -565,4 +565,150 @@ body {
   .footer-input-btn-icon {
     fill: black;
   }
+
+
+/* ----------------backdrop---------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+.backdrop.is-open {
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+
+}
+
+
+
+/* -------------------/backdrop-------------- */
+
+/* ---------------modal window-------------------- */
+
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  background-color: #FCFCFC;
+
+  padding: 72px 24px 24px 24px;
+
+}
+
+
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px  solid rgba(0, 0, 0, 0.10);
+  padding: 0;
+  background-color: var(--CORNFLOWER, #E7E9FC);;
+  border: none;
+  line-height: 0;
+
+  stroke: rgba(46, 47, 66, 1);
+  fill: rgba(46, 47, 66, 1);
+
+
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  stroke: rgba(255, 255, 255, 1);
+  fill: rgba(255, 255, 255, 1);
+  background-color: var(--OCEAN, #404BBF);
+
+}
+
+.review-form-description {
+  color: var(--NAVY-BLUE, #2E2F42);
+  text-align: center;
+  
+ 
+  font-weight: 500;
+  line-height:  1.5;
+  letter-spacing: 0.02em;
+
+
+  margin-bottom: 16px;
+}
+
+.review-form-field-wrapper {
+  margin-bottom: 8px;
+}
+
+.review-form-field-label {
+  display: block;
+  color: var(--LIGHT-SLATE, #8E8F99);
+
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+  margin-bottom: 4px;
+
+  }
+
+  .review-form-input-wrapper {
+    position: relative;
+  }
+
+
+  .review-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+
+    fill: rgba(46, 47, 66, 1);
+  }
+  
+
+.review-form-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  background-color: transparent;
+  padding-left: 38px;
+  
+
+}
+.review-form-comment {
+  width: 100%;
+}
+
+
+/* -------------/modal window-------------------- */
+
 
