--- a/css/styles.css
+++ b/css/styles.css
@@ -689,8 +689,11 @@ body {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-
     fill: rgba(46, 47, 66, 1);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
   }
   
 
@@ -701,12 +704,83 @@ body {
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
   background-color: transparent;
   padding-left: 38px;
+
+  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  outline: 0px solid transparent;
+}
   
 
+.review-form-input:focus {
+border-color: #4D5AE5;
+
 }
+
+.review-form-input:focus + .review-form-input-icon {
+ fill: #4D5AE5;
+  
+  }
+
 .review-form-comment {
   width: 100%;
+  min-height: 120px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  background-color: transparent;
+  padding: 8px 16px;
+  resize: none;
+
+
+  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: 0px solid transparent;
 }
+
+.review-form-comment::placeholder {
+  color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+}
+
+
+.review-form-comment:focus {
+  border-color: #4D5AE5;
+  
+}
+
+.review-form-own-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+ cursor: pointer;
+}
+
+.review-form-checkbox:checked +
+ .review-form-checkbox-label > 
+ .review-form-own-checkbox {
+ background-color: #404BBF;
+ border-color: #404BBF;
+}
+.review-form-own-icon {
+fill: white;
+opacity: 0;
+}
+
+.review-form-checkbox:checked +
+ .review-form-checkbox-label  
+ .review-form-own-icon {
+  opacity: 1;
+
+ }
 
 
 /* -------------/modal window-------------------- */
