--- a/css/styles.css
+++ b/css/styles.css
@@ -753,8 +753,42 @@ border-color: #4D5AE5;
   
 }
 
+.review-form-checkbox-wrappper {
+  margin-bottom: 24px;
+}
+
+.review-form-checkbox-label {
+   display: inline-flex;
+   align-items: center;
+
+  
+  color: var(--LIGHT-SLATE, #8E8F99);
+  
+  font-size: 12px;
+ 
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+}
+
+.review-form-checkbox-label a {
+  display: inline-flex;
+  margin-left: 3px;
+  color: var(--IRIS, #4D5AE5);
+
+  font-size: 12px;
+  
+  font-weight: 400;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+}
+
+
+
 .review-form-own-checkbox {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 16px;
@@ -762,6 +796,7 @@ border-color: #4D5AE5;
   border-radius: 2px;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
  cursor: pointer;
+ margin-right: 8px;
 }
 
 .review-form-checkbox:checked +
@@ -781,7 +816,12 @@ opacity: 0;
   opacity: 1;
 
  }
-
+ .review-form-checkbox:focus +
+ .review-form-checkbox-label > 
+ .review-form-own-checkbox {
+ outline: 2px solid #404BBF;
+ 
+}
 
 /* -------------/modal window-------------------- */
 
