--- a/css/styles.css
+++ b/css/styles.css
@@ -489,7 +489,7 @@ body {
   .last-land {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
   .logoin {
     color: var(--IRIS, #4d5ae5);
@@ -565,6 +565,81 @@ body {
 
   .footer-input-btn-icon {
     fill: black;
+  }
+
+  .footer-email-form-wrapper {
+    margin-left: auto;
+  }
+
+  .footer-email-form-text {
+    color: var(--WHITE, #FFF);
+
+    font-weight: 500;
+    line-height: 1.5; 
+    letter-spacing: 0.02em;
+
+    margin-bottom: 16px;
+  }
+
+  .footer-email-input {
+    border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    width: 264px;
+    height: 40px;
+    color: white;
+
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+
+    padding: 8px 16px;
+    margin-right: 24px;
+
+    background-color: var(--NAVY-BLUE, #2E2F42);
+
+    outline: 0px solid transparent;
+
+  }
+  .footer-email-input::placeholder {
+   color: white;
+  }
+
+  .footer-email-input:focus {
+    border-color: #4D5AE5;
+    
+    }
+
+
+
+
+  .footer-submit-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    color: white;
+    padding: 8px 24px;
+    min-width: 165px;
+    min-height: 40px;
+    background-color:var(--IRIS, #4D5AE5); 
+    border-radius: 4px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+  }
+
+  .footer-submit-btn:hover,
+  .footer-submit-btn:focus {
+   background-color: var(--OCEAN, #404BBF);
+  }
+
+
+
+
+  .footer-input-btn-icon {
+    margin-left: 16px;
   }
 
 
