--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,7 @@ body {
     min-height: 40px;
     background-color:var(--IRIS, #4D5AE5); 
     border-radius: 4px;
+    border-color: var(--IRIS, #4D5AE5);
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
