--- a/css/styles.css
+++ b/css/styles.css
@@ -668,8 +668,12 @@ body {
   visibility: hidden;
   pointer-events: none;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 
 }
 
@@ -699,20 +703,34 @@ body {
   border-radius: 4px;
   background-color: #FCFCFC;
 
-  padding: 72px 24px 24px 24px;
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+   0px 1px 3px rgba(0, 0, 0, 0.12),
+   0px 2px 1px rgba(0, 0, 0, 0.2);
+
+ padding: 72px 24px 24px 24px;
+
+ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
 }
 
 
 
 .modal-close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+
+
+
+
   position: absolute;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  border: 1px  solid rgba(0, 0, 0, 0.10);
+  border: 1px solid rgba(0, 0, 0, 0.10);
   padding: 0;
   background-color: var(--CORNFLOWER, #E7E9FC);;
   border: none;
@@ -721,10 +739,16 @@ body {
   stroke: rgba(46, 47, 66, 1);
   fill: rgba(46, 47, 66, 1);
 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.modal-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
@@ -751,7 +775,9 @@ body {
 .review-form-field-wrapper {
   margin-bottom: 8px;
 }
-
+.review-form-textarea-wrapper {
+  margin-bottom: 16px;
+}
 .review-form-field-label {
   display: block;
   color: var(--LIGHT-SLATE, #8E8F99);
@@ -883,6 +909,14 @@ border-color: #4D5AE5;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
  cursor: pointer;
  margin-right: 8px;
+
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+  fill: transparent;
+
 }
 
 .review-form-checkbox:checked +
