--- a/css/styles.css
+++ b/css/styles.css
@@ -739,15 +739,17 @@ body {
   stroke: rgba(46, 47, 66, 1);
   fill: rgba(46, 47, 66, 1);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-   border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-close-btn-icon {
+ 
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -962,6 +964,11 @@ opacity: 0;
 
 .review-form-submit-btn {
   display: block;
+
+
+  line-height: 1.5
+  font-weight: 500;
+  letter-spacing: 0.04em;
   min-width: 169px;
   padding: 16px 32px;
   border: none;
