--- a/css/styles.css
+++ b/css/styles.css
@@ -966,7 +966,7 @@ opacity: 0;
   display: block;
 
 
-  line-height: 1.5
+  line-height: 1.5;
   font-weight: 500;
   letter-spacing: 0.04em;
   min-width: 169px;
