--- a/css/styles.css
+++ b/css/styles.css
@@ -873,7 +873,7 @@ border-color: #4D5AE5;
 }
 
 .review-form-checkbox-label {
-   display: inline-flex;
+   /* display: inline-flex; */
    align-items: center;
 
   
@@ -904,7 +904,7 @@ border-color: #4D5AE5;
 
 .review-form-own-checkbox {
 
-  display: inline-flex;
+ display: inline-flex;
 
   justify-content: center;
   align-items: center;
